# notebooks

./: Makefile  OWNERS  README.md  asdgvzsx  awefaw  awsef  containers.conf  gen_gha_matrix_jobs.py  gha_lvm_overlay.bash  storage.conf
.github/workflows/: build-notebooks-TEMPLATE.yaml  build-notebooks-pr.yaml  build-notebooks.yaml  code-quality.yaml  docs.yaml  instant-merge.yaml  notebook-digest-updater.yaml  notebooks-digest-updater.yaml  notify-team-to-review-pr.yml  params-env.yaml  piplock-renewal.yaml  pr-merge-image-delete.yml  rebase-pr.yaml  test-containers.yaml  test-notebooks-TEMPLATE.yaml  update-commit-latest-env.yaml  update-trivy-vulnerability-db.yaml
.tekton/: xyz-pull-request.yaml  xyz-push.yaml
amd/rhel9-python-3.9/: Dockerfile
base/ubi9-python-3.11/: Dockerfile
ci/: cached_skopeo.py  check-params-env.sh  gen_gha_matrix_jobs.py  package_versions.py  package_versions_selftestdata.py  sha-digest-updater.sh  skopeo.py
ci/cached-builds/: 11-crio-ipv4-bridge.conflist  containers.conf  crio.conf  fuse.conf  gen_gha_matrix_jobs.py  gha_lvm_overlay.sh  gha_pr_changed_files.py  has_tests.py  kind.yaml  kubeadm.yaml  kyverno.yaml  make_test.py  podman.socket  resolv.conf  storage.conf
codeserver/odh-codeserver/: hatch_build.py  pyproject.toml
codeserver/odh-codeserver/odh_codeserver/: __init__.py
docs/: build-pipelines.md  konflux.md  workbenches-naming.md
jupyter/utils/: install_pdf_deps.sh  (+1 more)
scripts/: conftest.py  notebook_runner.py  pylocks_generator.py  rename_python_based_dirs.py  test_notebook_runner.py
tests/: manifests.py  test_main.py
(+199 files in other folders)
